update:farmers onboarding reworking
